--- a/configFileEx.conf
+++ b/configFileEx.conf
@@ -46,8 +46,8 @@ servers:
 
   error_page:
   - 400: ./www/html/error.html
-    404: ./www/html/error.html
-    500: ./www/html/error2.html
+  - 404: ./www/html/error.html
+  - 500: ./www/html/error2.html
 
   locations:
   - path: /board
@@ -93,93 +93,93 @@ servers:
     allow_methods: GET, POST
     cgi_info: php, php-fpm
 
-server
+# server
 
-{
-	listen 80;
+# {
+# 	listen 80;
 
-	host localhost;
+# 	host localhost;
 
-	server_name     example.com;
+# 	server_name     example.com;
 
-	client_max_body_size    1m;
+# 	client_max_body_size    1m;
 
-	error_page 403 /errors/403.html;
-	error_page 404 /errors/404.html;
-	error_page 405 /errors/405.html;
-	error_page 500 /errors/500.html;
+# 	error_page 403 /errors/403.html;
+# 	error_page 404 /errors/404.html;
+# 	error_page 405 /errors/405.html;
+# 	error_page 500 /errors/500.html;
 
-	root /Users/moulmado/Desktop/webtest/public;
+# 	root /Users/moulmado/Desktop/webtest/public;
 	
 
-	location /
-	{
-		autoindex on;
-		index /index.html;
-		upload_enable on;
-		allow_methods [GET, POST, DELETE];
-	}
+# 	location /
+# 	{
+# 		autoindex on;
+# 		index /index.html;
+# 		upload_enable on;
+# 		allow_methods [GET, POST, DELETE];
+# 	}
 
-	location /return
-	{
-		return 301 /www;
-	}
+# 	location /return
+# 	{
+# 		return 301 /www;
+# 	}
 
-	location *.php
-	{
-		allow_methods [GET,POST];
-		fastcgi_pass /Users/moulmado/goinfre/.brew/bin/php-cgi;
-	}
+# 	location *.php
+# 	{
+# 		allow_methods [GET,POST];
+# 		fastcgi_pass /Users/moulmado/goinfre/.brew/bin/php-cgi;
+# 	}
 
-	location *.py
-	{
-		allow_methods [GET,POST];
-		fastcgi_pass /usr/bin/python;
-	}
+# 	location *.py
+# 	{
+# 		allow_methods [GET,POST];
+# 		fastcgi_pass /usr/bin/python;
+# 	}
 
-	location /upload
-	{
-		allow_methods [ POST ];
-		upload_enable on;
-		upload_store /upload;
-	}
+# 	location /upload
+# 	{
+# 		allow_methods [ POST ];
+# 		upload_enable on;
+# 		upload_store /upload;
+# 	}
 
-}
-server
-{
-	server_name webserv; 
+# }
+# server
+# {
+# 	server_name webserv; 
 
-	host localhost;
+# 	host localhost;
 
-	listen 		422;
-	listen 		4242;
-	listen 		4220;
+# 	listen 		422;
+# 	listen 		4242;
+# 	listen 		4220;
 
 
-	root /Users/moulmado/Desktop/webtest/public;
-	client_max_body_size 4096m; 
+# 	root /Users/moulmado/Desktop/webtest/public;
+# 	client_max_body_size 4096m; 
 
-	error_page 403 /errors/403.html;
-	error_page 404 /errors/404.html;
-	error_page 405 /errors/405.html;
-	error_page 500 /errors/500.html;
+# 	error_page 403 /errors/403.html;
+# 	error_page 404 /errors/404.html;
+# 	error_page 405 /errors/405.html;
+# 	error_page 500 /errors/500.html;
 
-	location /board
-	{
-		allow_methods [GET];
-		root ./www/html;
-	}
+# 	location /board
+# 	{
+# 		allow_methods [GET];
+# 		root ./www/html;
+# 	}
 
-	location /board/content
-	{
-		allow_methods [GET,POST,DELETE];
-		root ./www/html/contents;
-		index board.html;
-		autoindex on;
-	}
+# 	location /board/content
+# 	{
+# 		allow_methods [GET,POST,DELETE];
+# 		root ./www/html/contents;
+# 		index board.html;
+# 		autoindex on;
+# 	}
 	
-	location /cgi
-	{
-		allow_methods [GET, POST];
-	}
-}
+# 	location /cgi
+# 	{
+# 		allow_methods [GET, POST];
+# 	}
+# }
