--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -2,7 +2,6 @@ server:
 - server_name: example.com
 
   listen: 80
-  listen: 2
 
   host: localhost
 
@@ -32,8 +31,6 @@ server:
 - server_name: webserv
 
   listen: 422
-  listen: 4242
-  listen: 4220
 
   host: 0.0.5.0
 
@@ -58,8 +55,7 @@ server:
     autoindex: on
     index: board.html
     cgi_info: php, php-cgi
-    redirection:
-    - 524 https://profile.intra.42.fr/
+    redirection: 524 https://profile.intra.42.fr/
 
   - path: /cgi        
     allow_methods: GET, POST     
