started parsing the config file

--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -5,7 +5,7 @@ server:
 
   host: localhost
 
-  client_max_body_size: 1m
+  client_max_body_size: 1
 
   error_page:
   - 403: /errors/403.html
@@ -36,7 +36,7 @@ server:
 
   root: ./www/html
 
-  client_max_body_size: 4096m
+  client_max_body_size: 4096
 
   error_page:
   - 400: ./www/html/error.html
