--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -21,8 +21,7 @@ server:
     allow_methods: GET, POST, DELETE
 
   - path: /return
-    return:
-    - 301: /www
+    return: 301 /www
 
   - path: /upload
     allow_methods: POST
@@ -34,32 +33,31 @@ server:
 
   host: 0.0.5.0
 
-  root: ./www/html
+  root: ./
 
   client_max_body_size: 4096
 
   error_page:
-  - 400: ./www/html/error.html
-  - 404: ./www/html/error.html
-  - 500: ./www/html/error2.html
+  - 400: /www/html/error.html
+  - 404: /www/html/error.html
+  - 500: /www/html/error2.html
           
   location:
   - path: /board
     allow_methods: GET
-    root: ./www/html
-                           
+    root: ./
   - path: /board/content
     allow_methods: GET, POST, DELETE
-    root: ./www/html/content
+    root: ./
     upload_path: /upload
     autoindex: on
     index: board.html
-    cgi_info: php, php-cgi
+    fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi
     redirection: 524 https://profile.intra.42.fr/
 
   - path: /cgi        
     allow_methods: GET, POST     
-    cgi_info: php, php-fpm      
+    fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi     
 
 - server_name: another_webserv
 
@@ -67,18 +65,18 @@ server:
       
   host: 0.0.0.0
 
-  root: ./www/html
+  root: ./
 
-  client_max_body_size: 256m
+  client_max_body_size: 256
   location:
   - path: /board
     allow_methods: GET
-    root: ./www/html
+    root: ./
 
   - path: /board/content
     allow_methods: GET, POST, DELETE
-    root: ./www/html/contents
+    root: ./
   - path: /cgi
     allow_methods: GET, POST
-    cgi_info: php, php-fpm
+    fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi
 
