adding get request

--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -1,9 +1,9 @@
 server: 
 - server_name: example.com
 
-  listen: 80
+  listen: 8081
 
-  host: localhost
+  host: 127.0.0.1
 
   client_max_body_size: 1
 
@@ -17,6 +17,8 @@ server:
 
   location:
   - path: /
+    root:
+    index: file
     autoindex: on
     allow_methods: GET, POST, DELETE
 
@@ -27,56 +29,55 @@ server:
     allow_methods: POST
     upload_path: /upload
 
-- server_name: webserv
+# - server_name: webserv
 
-  listen: 422
+#   listen: 422
 
-  host: 0.0.5.0
+#   host: 0.0.5.0
 
-  root: ./
+#   root: ./
 
-  client_max_body_size: 4096
+#   client_max_body_size: 4096
 
-  error_page:
-  - 400: /www/html/error.html
-  - 404: /www/html/error.html
-  - 500: /www/html/error2.html
+#   error_page:
+#   - 400: /www/html/error.html
+#   - 404: /www/html/error.html
+#   - 500: /www/html/error2.html
           
-  location:
-  - path: /board
-    allow_methods: GET
-    root: ./
-  - path: /board/content
-    allow_methods: GET, POST, DELETE
-    root: ./
-    upload_path: /upload
-    autoindex: on
-    index: board.html
-    fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi
-    redirection: 524 https://profile.intra.42.fr/
+#   location:
+#   - path: /board
+#     allow_methods: GET
+#     root: ./
+#   - path: /board/content
+#     allow_methods: GET, POST, DELETE
+#     root: ./
+#     upload_path: /upload
+#     autoindex: on
+#     fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi
+#     redirection: 524 https://profile.intra.42.fr/
 
-  - path: /cgi        
-    allow_methods: GET, POST     
-    fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi     
+#   - path: /cgi        
+#     allow_methods: GET, POST     
+#     fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi     
 
-- server_name: another_webserv
+# - server_name: another_webserv
 
-  listen: 4242       
+#   listen: 4242       
       
-  host: 0.0.0.0
+#   host: 0.0.0.0
 
-  root: ./
+#   root: ./
 
-  client_max_body_size: 256
-  location:
-  - path: /board
-    allow_methods: GET
-    root: ./
+#   client_max_body_size: 256
+#   location:
+#   - path: /board
+#     allow_methods: GET
+#     root: ./
 
-  - path: /board/content
-    allow_methods: GET, POST, DELETE
-    root: ./
-  - path: /cgi
-    allow_methods: GET, POST
-    fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi
+#   - path: /board/content
+#     allow_methods: GET, POST, DELETE
+#     root: ./
+#   - path: /cgi
+#     allow_methods: GET, POST
+#     fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi
 
