adding get request

--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -5,7 +5,7 @@ server:
 
   host: 127.0.0.1
 
-  client_max_body_size: 1
+  clientMaxBodySize: 1
 
   error_page:
   - 403: /errors/403.html
@@ -37,7 +37,7 @@ server:
 
 #   root: ./
 
-#   client_max_body_size: 4096
+#   clientMaxBodySize: 4096
 
 #   error_page:
 #   - 400: /www/html/error.html
@@ -68,7 +68,7 @@ server:
 
 #   root: ./
 
-#   client_max_body_size: 256
+#   clientMaxBodySize: 256
 #   location:
 #   - path: /board
 #     allow_methods: GET
