--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -8,16 +8,15 @@ server:
   clientMaxBodySize: 1
 
   error_page:
-  - 403: /errors/403.html
-  - 404: /errors/404.html
-  - 405: /errors/405.html
-  - 500: /errors/500.html
+  - 400: ./defaultErrorPages/400.html
+  - 401: ./defaultErrorPages/401.html
+  - 404: ./defaultErrorPages/404.html
+  - 500: ./defaultErrorPages/500.html
 
-  root: /Users/moulmado/Desktop/webtest/public
+  root: /Users/moulmado/Desktop/gitserv
 
   location:
   - path: /
-    root:
     index: file
     autoindex: on
     allow_methods: GET, POST, DELETE
