--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -22,8 +22,11 @@ server:
     allow_methods: GET, POST, DELETE
     
   - path: /upload
-    allow_methods: POST
+    allow_methods: GET
     upload_path: /upload
+  - path: /cgi
+    allow_methods: GET, POST, DELETE
+    cgi_info: /Users/moulmado/goinfre/.brew/bin/php-cgi
 
 # - server_name: webserv
 
