responding with the appropriate response for a get request

--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -8,16 +8,15 @@ server:
   clientMaxBodySize: 1
 
   error_page:
-  - 400: ./defaultErrorPages/400.html
-  - 401: ./defaultErrorPages/401.html
-  - 404: ./defaultErrorPages/404.html
-  - 500: ./defaultErrorPages/500.html
+  - 400: ./www/defaultErrorPages/400.html
+  - 401: ./www/defaultErrorPages/401.html
+  - 404: ./www/defaultErrorPages/404.html
+  - 500: ./www/defaultErrorPages/500.html
 
   root: /Users/moulmado/Desktop/webserv
 
   location:
   - path: /
-    index: file
     autoindex: on
     allow_methods: GET, POST, DELETE
 
