working on file upload

--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -1,4 +1,4 @@
-server: 
+GGserver: 
 - server_name: example.com
 
   listen: 8081
@@ -9,6 +9,7 @@ server:
 
   error_page:
   - 400: ./www/defaultErrorPages/400.html
+  - 403: ./www/defaultErrorPages/403.html
   - 404: ./www/defaultErrorPages/404.html
   - 500: ./www/defaultErrorPages/500.html
 
@@ -21,19 +22,21 @@ server:
 
 # - server_name: webserv
 
-#   listen: 422
+#   listen: 4222
 
-#   host: 0.0.5.0
-
-#   root: ./
+#   root: /Users/moulmado/Desktop/webserv
 
 #   clientMaxBodySize: 4096
 
+#   location:
+#   - path: /www
+#     autoindex: on
+#     allow_methods: GET, POST, DELETE
 #   error_page:
 #   - 400: /www/html/error.html
 #   - 404: /www/html/error.html
 #   - 500: /www/html/error2.html
-          
+
 #   location:
 #   - path: /board
 #     allow_methods: GET
