--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -1,4 +1,4 @@
-GGserver: 
+server: 
 - server_name: example.com
 
   listen: 8081
@@ -24,39 +24,27 @@ GGserver:
 
 #   listen: 4222
 
+#   host: 0.0.0.0
+
 #   root: /Users/moulmado/Desktop/webserv
 
 #   clientMaxBodySize: 4096
 
-#   location:
-#   - path: /www
-#     autoindex: on
-#     allow_methods: GET, POST, DELETE
 #   error_page:
-#   - 400: /www/html/error.html
-#   - 404: /www/html/error.html
-#   - 500: /www/html/error2.html
+#   - 400: ./www/defaultErrorPages/400.html
+#   - 403: ./www/defaultErrorPages/403.html
+#   - 404: ./www/defaultErrorPages/404.html
 
 #   location:
-#   - path: /board
-#     allow_methods: GET
-#     root: ./
-#   - path: /board/content
-#     allow_methods: GET, POST, DELETE
-#     root: ./
-#     upload_path: /upload
+#   - path: /
 #     autoindex: on
-#     fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi
-#     redirection: 524 https://profile.intra.42.fr/
-
-#   - path: /cgi        
-#     allow_methods: GET, POST     
-#     fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi     
+#     allow_methods: GET, POST, DELETE
+#     root: /Users/moulmado/Desktop/webserv/inc    
 
 # - server_name: another_webserv
 
-#   listen: 4242       
-      
+#   listen: 4242
+
 #   host: 0.0.0.0
 
 #   root: ./
