recieving chunked requests

--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -19,6 +19,9 @@ server:
   - path: /
     autoindex: on
     allow_methods: GET, POST, DELETE
+  - path: /cgi
+    allow_methods: GET, POST, DELETE
+    cgi_info: 
 
 # - server_name: webserv
 
