working on cgi feature

--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -1,12 +1,17 @@
+# Config file format is YAML
+# only GET, POST, DELETE methods are supported
+# only GET, POST methods are supported for cgi
+# autoindex works only with GET method
+# cgi_info is the path to the cgi binary preferably chose on in the assets/cgi-bin directory
+# only c++ php and python cgi are supported
+# it is necessary to set a general root path for the server
+# it is possible to set a root path for each location if not set the general root path will be used
+
 server: 
-- server_name: example.com
-
+- server_name: hamid
   listen: 8080
-
   host: 127.0.0.1
-
   clientMaxBodySize: 1
-
   error_page:
   - 400: ./www/defaultErrorPages/400.html
   - 403: ./www/defaultErrorPages/403.html
@@ -21,7 +26,7 @@ server:
     allow_methods: GET, POST, DELETE
   - path: /cgi
     allow_methods: GET, POST, DELETE
-    cgi_info: 
+    cgi_info: ./assets/cgi-bin/php-cgi
 
 # - server_name: webserv
 
