--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -24,9 +24,9 @@ server:
   - path: /
     autoindex: on
     allow_methods: GET, POST, DELETE
-  - path: /cgi
+  - path: /assets/cgi
     allow_methods: GET, POST, DELETE
-    cgi_info: ./assets/cgi-bin/php-cgi
+    cgi_info: ./assets/cgi-bin/py-cgi
 
 # - server_name: webserv
 
