--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -9,7 +9,7 @@
 
 server: 
 - server_name: hamid
-  listen: 8080
+  listen: 8081
   host: 127.0.0.1
   clientMaxBodySize: 1
   error_page:
@@ -24,9 +24,18 @@ server:
   - path: /
     autoindex: on
     allow_methods: GET, POST, DELETE
-  - path: /assets/cgi
-    allow_methods: GET, POST, DELETE
-    cgi_info: ./assets/cgi-bin/py-cgi
+
+#php-cgi
+  - path: /assets/cgi/php
+    allow_methods: GET, POST
+    autoindex: on
+    cgi_info: /Users/moulmado/Desktop/webserv/assets/cgi-bin/php-cgi
+#python-cgi
+  - path: /assets/cgi/python
+    allow_methods: GET, POST
+    autoindex: on
+    cgi_info: /Users/moulmado/Desktop/webserv/assets/cgi-bin/py-cgi
+
 
 # - server_name: webserv
 
