--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -8,10 +8,10 @@
 # it is possible to set a root path for each location if not set the general root path will be used
 
 server: 
-- server_name: hamid
+- server_name: aderader
   listen: 8081
   host: 127.0.0.1
-  clientMaxBodySize: 1
+  clientMaxBodySize: 100
   error_page:
   - 400: ./www/defaultErrorPages/400.html
   - 403: ./www/defaultErrorPages/403.html
@@ -23,15 +23,19 @@ server:
   location:
   - path: /
     autoindex: on
+    index: index.html
+    upload_path: /Users/moulmado/Desktop/webserv/www/upload
     allow_methods: GET, POST, DELETE
 
 #php-cgi
-  - path: /assets/cgi/php
+  - path: /php-cgi
+    root: /Users/moulmado/Desktop/webserv/assets/cgi
     allow_methods: GET, POST
     autoindex: on
     cgi_info: /Users/moulmado/Desktop/webserv/assets/cgi-bin/php-cgi
 #python-cgi
-  - path: /assets/cgi/python
+  - path: /py-cgi
+    root: /Users/moulmado/Desktop/webserv/assets/cgi
     allow_methods: GET, POST
     autoindex: on
     cgi_info: /Users/moulmado/Desktop/webserv/assets/cgi-bin/py-cgi
