servers now can run with multi socker descriptors

--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -3,27 +3,34 @@
 # only GET, POST methods are supported for cgi
 # autoindex works only with GET method
 # cgi_info is the path to the cgi binary preferably chose on in the assets/cgi-bin directory
-# only c++ php and python cgi are supported
+# only php and python cgi are supported
 # it is necessary to set a general root path for the server
 # it is possible to set a root path for each location if not set the general root path will be used
+# redirection is possible with the return keyword
+# redirection is only possible with the GET method
+# redirection is only possible with the 301 code
+# u can use the clientMaxBodySize keyword to set the max size of the body of a request
+# u can use the error_page keyword to set the path to the error page for each error code
+# if the error_page keyword is not set the default error page will be used
+# u can use upload_path to set the path to the directory where the uploaded files will be stored
 
 server: 
-- server_name: aderader
+- server_name: ader
   listen: 8081
+  listen: 8082
   host: 127.0.0.1
   clientMaxBodySize: 100
-  error_page:
-  - 400: ./www/defaultErrorPages/400.html
-  - 403: ./www/defaultErrorPages/403.html
-  - 404: ./www/defaultErrorPages/404.html
-  - 500: ./www/defaultErrorPages/500.html
+  # error_page:
+  # - 400: ./www/defaultErrorPages/400.html
+  # - 403: ./www/defaultErrorPages/403.html
+  # - 404: ./www/defaultErrorPages/404.html
+  # - 500: ./www/defaultErrorPages/500.html
 
   root: /Users/moulmado/Desktop/webserv
 
   location:
   - path: /
     autoindex: on
-    index: index.html
     upload_path: /Users/moulmado/Desktop/webserv/www/upload
     allow_methods: GET, POST, DELETE
 
@@ -39,28 +46,33 @@ server:
     allow_methods: GET, POST
     autoindex: on
     cgi_info: /Users/moulmado/Desktop/webserv/assets/cgi-bin/py-cgi
+    
+#redirect
+  - path: /redirect
+    return: 301 redirectt
+    allow_methods: GET
 
 
-# - server_name: webserv
+- server_name: webserv
 
-#   listen: 4222
+  listen: 8081
 
-#   host: 0.0.0.0
+  host: 0.0.0.0
 
-#   root: /Users/moulmado/Desktop/webserv
+  root: /Users/moulmado/Desktop/webserv
 
-#   clientMaxBodySize: 4096
+  clientMaxBodySize: 4096
 
-#   error_page:
-#   - 400: ./www/defaultErrorPages/400.html
-#   - 403: ./www/defaultErrorPages/403.html
-#   - 404: ./www/defaultErrorPages/404.html
+  error_page:
+  - 400: ./www/defaultErrorPages/400.html
+  - 403: ./www/defaultErrorPages/403.html
+  - 404: ./www/defaultErrorPages/404.html
 
-#   location:
-#   - path: /
-#     autoindex: on
-#     allow_methods: GET, POST, DELETE
-#     root: /Users/moulmado/Desktop/webserv/inc    
+  location:
+  - path: /
+    autoindex: on
+    allow_methods: GET, POST, DELETE
+    root: /Users/moulmado/Desktop/webserv/inc    
 
 # - server_name: another_webserv
 
