--- a/newConfigFile.conf
+++ b/newConfigFile.conf
@@ -1,4 +1,5 @@
 # Config file format is YAML
+# u cant have 2 servers with same port
 # only GET, POST, DELETE methods are supported
 # only GET, POST methods are supported for cgi
 # autoindex works only with GET method
@@ -16,15 +17,15 @@
 
 server: 
 - server_name: ader
-  listen: 8081
-  listen: 8082
+  listen: 8080
+  listen: 8083
   host: 127.0.0.1
   clientMaxBodySize: 100
-  # error_page:
-  # - 400: ./www/defaultErrorPages/400.html
-  # - 403: ./www/defaultErrorPages/403.html
-  # - 404: ./www/defaultErrorPages/404.html
-  # - 500: ./www/defaultErrorPages/500.html
+  error_page:
+  - 400: ./www/defaultErrorPages/400.html
+  - 403: ./www/defaultErrorPages/403.html
+  - 404: ./www/defaultErrorPages/404.html
+  - 500: ./www/defaultErrorPages/500.html
 
   root: /Users/moulmado/Desktop/webserv
 
@@ -46,16 +47,23 @@ server:
     allow_methods: GET, POST
     autoindex: on
     cgi_info: /Users/moulmado/Desktop/webserv/assets/cgi-bin/py-cgi
-    
-#redirect
-  - path: /redirect
-    return: 301 redirectt
+
+- server_name: same-port
+
+  listen: 8081
+  host:127.0.0.1
+  root: /Users/moulmado/Desktop/webserv
+
+  location:
+  - path: /
+    autoindex: on
     allow_methods: GET
+
 
 
 - server_name: webserv
 
-  listen: 8081
+  listen: 6060
 
   host: 0.0.0.0
 
@@ -74,24 +82,19 @@ server:
     allow_methods: GET, POST, DELETE
     root: /Users/moulmado/Desktop/webserv/inc    
 
-# - server_name: another_webserv
 
-#   listen: 4242
+- server_name: redirection
+  
+  listen: 7070
 
-#   host: 0.0.0.0
+  host: 0.0.0.0
 
-#   root: ./
+  root: /Users/moulmado/Desktop/webserv
 
-#   clientMaxBodySize: 256
-#   location:
-#   - path: /board
-#     allow_methods: GET
-#     root: ./
+  clientMaxBodySize: 4096
 
-#   - path: /board/content
-#     allow_methods: GET, POST, DELETE
-#     root: ./
-#   - path: /cgi
-#     allow_methods: GET, POST
-#     fastcgi_pass: /Users/moulmado/goinfre/.brew/bin/php-cgi
+  location:
+  - path: /
+    allow_methods: GET
+    return: 301 https://profile.intra.42.fr/
 
