--- a/default.conf
+++ b/default.conf
@@ -17,10 +17,10 @@
 
 server: 
 - server_name: ader
-  listen: 8080
   listen: 8083
+  listen: 8082
   host: 127.0.0.1
-  clientMaxBodySize: 100
+  clientMaxBodySize: 50000
   error_page:
   - 400: ./www/defaultErrorPages/400.html
   - 403: ./www/defaultErrorPages/403.html
@@ -32,6 +32,11 @@ server:
   location:
   - path: /
     autoindex: on
+    upload_path: /Users/moulmado/Desktop/webserv/www/upload
+    allow_methods: GET, POST, DELETE
+
+  - path: /www/upload
+    index: index.html
     upload_path: /Users/moulmado/Desktop/webserv/www/upload
     allow_methods: GET, POST, DELETE
 
@@ -50,14 +55,14 @@ server:
 
 - server_name: same-port
 
-  listen: 8081
+  listen: 8080
   host:127.0.0.1
   root: /Users/moulmado/Desktop/webserv
 
   location:
   - path: /
     autoindex: on
-    allow_methods: GET
+    allow_methods: GET, POST
 
 
 
@@ -69,7 +74,7 @@ server:
 
   root: /Users/moulmado/Desktop/webserv
 
-  clientMaxBodySize: 4096
+  clientMaxBodySize: 10000
 
   error_page:
   - 400: ./www/defaultErrorPages/400.html
@@ -91,7 +96,7 @@ server:
 
   root: /Users/moulmado/Desktop/webserv
 
-  clientMaxBodySize: 4096
+  clientMaxBodySize: 402596
 
   location:
   - path: /
